crates/toml/tests/snapshots/invalid/table/multiline-key-01.stderr
TOML parse error at line 1, column 4
  |
1 | ["""tbl"""]
  |    ^
invalid table header
expected `.`, `]`
